@@ -1,6 +1,6 @@
 #ifndef XCHAT_CTCP_H
 #define XCHAT_CTCP_H
 
-void ctcp_handle (session *sess, char *to, char *nick, char *msg, char *word[], char *word_eol[], int id);
+void ctcp_handle (session *sess, char *to, char *nick, char *ip, char *msg, char *word[], char *word_eol[], int id);
 
 #endif
